--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,15 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  min-height: 100vh;
+  background-color: grey;
+}
+
+.wrapper {
+  width: 80vw;
+  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+}
