Modify styling for revealed ships

--- a/src/modules/dom/gameboardCell/gameboardCell.css
+++ b/src/modules/dom/gameboardCell/gameboardCell.css
@@ -1,9 +1,19 @@
-.gameboardCell {
+.gameboardCell:not(.ship) {
   border: 1px solid rgb(71, 148, 184);
 }
 
 .ship {
   background-color: black;
+}
+
+.horizontal-ship {
+  border-top: 5px solid grey;
+  border-bottom: 5px solid grey;
+}
+
+.vertical-ship {
+  border-left: 5px solid grey;
+  border-right: 5px solid grey;
 }
 
 .hit {
@@ -15,18 +25,18 @@
 }
 
 /* Remove blue borders around edge of gameboard */
-.gameboardCell:nth-child(10n - 9) {
+.gameboardCell:not(.ship):nth-child(10n - 9) {
   border-left: none;
 }
 
-.gameboardCell:nth-child(10n) {
+.gameboardCell:not(.ship):nth-child(10n) {
   border-right: none;
 }
 
-.gameboardCell:nth-child(n + 91) {
+.gameboardCell:not(.ship):nth-child(n + 91) {
   border-bottom: none;
 }
 
-.gameboardCell:nth-child(-n + 10) {
+.gameboardCell:not(.ship):nth-child(-n + 10) {
   border-top: none;
 }
