--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
   box-sizing: border-box;
+  font-family: Monserrat, Arial, Helvetica, sans-serif;
 }
 
 *,
