Add styling for head and tail of each ship

--- a/src/modules/dom/gameboardCell/gameboardCell.css
+++ b/src/modules/dom/gameboardCell/gameboardCell.css
@@ -11,9 +11,25 @@
   border-bottom: 5px solid grey;
 }
 
+.horizontal-ship-head {
+  border-left: 10px solid rgb(34, 74, 92);
+}
+
+.horizontal-ship-tail {
+  border-right: 10px solid rgb(34, 74, 92);
+}
+
 .vertical-ship {
   border-left: 5px solid grey;
   border-right: 5px solid grey;
+}
+
+.vertical-ship-head {
+  border-top: 10px solid rgb(34, 74, 92);
+}
+
+.vertical-ship-tail {
+  border-bottom: 10px solid rgb(34, 74, 92);
 }
 
 .hit {
