--- a/src/modules/dom/gameboard/gameboard.css
+++ b/src/modules/dom/gameboard/gameboard.css
@@ -15,10 +15,12 @@
 .gameboard-status-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 6rem;
 }
 
 .gameboard-status-message {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-style: italic;
   font-weight: bold;
 }
