--- a/src/modules/dom/switchShipOrientationButton/switchShipOrientationButton.css
+++ b/src/modules/dom/switchShipOrientationButton/switchShipOrientationButton.css
@@ -1,4 +1,10 @@
 .switch-ship-orientation-button {
+  width: 5rem;
+  height: 5rem;
   background-color: pink;
   padding: 1rem;
+  font-size: 2rem;
+  border: none;
+  background-color: black;
+  color: white;
 }
